Fixed organiser name overflow

--- a/public/css/event-profile.css
+++ b/public/css/event-profile.css
@@ -113,6 +113,7 @@
   margin: 0 0 0.5rem 0;
   color: var(--text-color);
   line-height: 1.3;
+  overflow: hidden;
 }
 
 .organiser-rating {
